# hak

./: Cargo.toml  README.md  build.zig  flake.nix  fs.img  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
deprecated/: build.zig
deprecated/src/: kmain.zig
deprecated/src/arch/riscv/: linker.ld
deprecated_src/: kmem.rs  main.rs  page.rs
deprecated_src/arch/riscv/: link.ld  mod.rs
deprecated_src/arch/riscv/rv64gc/: boot.S  mod.rs  trap.S
kernel/: console.d  date.zig  elf.zig  fcntl.zig  kernel  kernel.asm  kernel.sym  memlayout.zig  param.zig  printf.d  riscv.zig  spinlock.c  stat.zig
mkfs/: mkfs
src/: assembly.rs  block.rs  buffer.rs  console.rs  cpu.rs  elf.rs  fs.rs  gpu.rs  input.rs  kmain.zig  kmem.rs  lock.rs  main.rs  page.rs  plic.rs  process.rs  rng.rs  sched.rs  syscall.rs  test.rs  trap.rs  uart.rs  vfs.rs  virtio.rs
src/arch/riscv/: link.ld
src/arch/riscv/rv64gc/: mem.rs  mod.rs
src/asm/: boot.S  mem.S  trap.S
src/lds/: virt.lds
src/virtio/: block.rs  input.rs  mod.rs
user/: _cat  _echo  _forktest  _grep  _grind  _init  _kill  _ln  _ls  _mkdir  _rm  _sh  _stressfs  _usertests  _wc  _zombie  initcode.out  printf.d  usertests.asm  usertests.sym
userspace/: Makefile  fb  fb.elf  helloworld  helloworld.elf  shell  shell.cpp  shell.elf  sleepy  sleepy.elf
userspace/startlib/: Makefile  input-event-codes.h  syscall.h
zig-cache/o/0810bde03fd66fd30d53bdae8beaaf6c/: builtin.zig  kernel  lld.id  stage1.id
zig-cache/o/98dc2b37d86b01aa38805b751d621a73/: build  builtin.zig  lld.id  stage1.id
(+2 files in other folders)
