[package]
name = "romlin"
version = "0.1.0"
authors = ["rrremiii <valent.xarin@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build-dependencies]
# cc = "1.0.67"

