[package]
name = "romlin-kernel"
version = "0.1.0"
authors = ["rrremiii <valent.xarin@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
enumflags2 = "0.7.1"
num_enum = { version = "0.5.1", default-features = false}
