[package]
name = "hak"
version = "0.1.0"
authors = ["rrremiii <valent.xarin@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
spin = "0.9.0"
# packed_struct = { version = "0.5.0", default-features = false }
